--- a/DuAn1/src/View/TrangChu.form
+++ b/DuAn1/src/View/TrangChu.form
@@ -515,9 +515,14 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JDesktopPane" name="jDesktopPane1">
+          <Properties>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[1010, 640]"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="270" y="0" width="920" height="640"/>
+              <AbsoluteConstraints x="270" y="0" width="740" height="-1"/>
             </Constraint>
           </Constraints>
 
